--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ build/
 develop-eggs/
 dist/
 uploads/
+Scripts/
 downloads/
 eggs/
 .eggs/
@@ -27,6 +28,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.cfg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
